fr #381 Events now display on the events calendar.
Events pulled from json view now display on the calendar.  The test_page controller still displays a separate calendar, We will probably remove that controller etc shortly.

--- a/app/views/calendar_events/index.html.erb
+++ b/app/views/calendar_events/index.html.erb
@@ -34,6 +34,8 @@
 <div class="calendar"></div>
 
 <script type="text/javascript">
-  $('.calendar').fullCalendar({});
+  $('.calendar').fullCalendar({
+    events: '/calendar_events.json'
+  });
 </script>
 
