for #381 adding modal forms
these forms work to create a basic event. need to add all the fields we will want.  also still need to figure out how to use datetme picker to make the form more user friendly

--- a/app/views/calendar_events/show.html.erb
+++ b/app/views/calendar_events/show.html.erb
@@ -20,5 +20,5 @@
   <%= @calendar_event.end_time %>
 </p>
 
-<%= link_to 'Edit', edit_calendar_event_path(@calendar_event) %> |
+<%= link_to 'Edit', edit_calendar_event_path(@calendar_event), remote: true %> |
 <%= link_to 'Back', calendar_events_path %>
