--- a/app/views/calendar_events/index.html.erb
+++ b/app/views/calendar_events/index.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Listing Calendar Events</h1>
 
 <table>
@@ -21,20 +19,40 @@
         <td><%= calendar_event.start_time %></td>
         <td><%= calendar_event.end_time %></td>
         <td><%= link_to 'Show', calendar_event %></td>
-        <td><%= link_to 'Edit', edit_calendar_event_path(calendar_event) %></td>
-        <td><%= link_to 'Destroy', calendar_event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Edit', edit_calendar_event_path(calendar_event), remote: true %></td>
+        <td><%= link_to 'Destroy', calendar_event, method: :delete, data: { confirm: 'Are you sure?' }, remote: true %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 <br>
 
-<%= link_to 'New Calendar event', new_calendar_event_path %>
+<%= link_to 'New Calendar event', new_calendar_event_path, remote: true %>
 
 <div class="calendar"></div>
 
 <script type="text/javascript">
   $('.calendar').fullCalendar({
+    header: {
+      left: 'prev,next today',
+      center: 'title',
+      right: 'month,agendaWeek,agendaDay'
+    },
+    selectable: true,
+    selectHelper: true,
+    editable: true,
+    eventLimit: true,
+
+    select: function(start, end) {
+      $.getScript('/events/new', function() {
+        $('#event_date_range').val(moment(start).format("MM/DD/YYYY HH:mm") + ' - ' + moment(end).format("MM/DD/YYYY HH:mm"))
+        date_range_picker();
+        $('.start_hidden').val(moment(start).format('YYYY-MM-DD HH:mm'));
+        $('.end_hidden').val(moment(end).format('YYYY-MM-DD HH:mm'));
+      });
+
+      calendar.fullCalendar('unselect');
+    },
     events: '/calendar_events.json'
   });
 </script>
