for #381 basic calendar functions intact but still not ready for primetime
User can:

* perform all CRUD actions via modal forms
* view events index on the calendar by month week or day
* click thru to specific events to view, edit delete

Outstanding issues:

* Rspec needed
* needs better input of datetimes
* inline javascript needs to be removed to asset pipeline
* need permissions (who can edit/delete?)
* make events commentable
* make events followable
* allow uploads of event photos and videos
* add categories for events (litigation events vs community events)
* build appropriate relationships between CalendarEvents and other models

--- a/app/views/test_pages/calendar.html.erb
+++ b/app/views/test_pages/calendar.html.erb
@@ -3,7 +3,7 @@
 <div class="calendar"></div>
 
 <script type="text/javascript">
-	$('.calendar').fullCalendar(
+	$('.calendar').fullCalendar({
     events: '/calendar_events.json'
-	);
+	});
 </script>
