--- a/app/views/calendar_events/index.html.erb
+++ b/app/views/calendar_events/index.html.erb
@@ -42,9 +42,10 @@
     selectHelper: true,
     editable: true,
     eventLimit: true,
+    events: '/calendar_events.json',
 
     select: function(start, end) {
-      $.getScript('/events/new', function() {
+      $.getScript('/calendar_events/new', function() {
         $('#event_date_range').val(moment(start).format("MM/DD/YYYY HH:mm") + ' - ' + moment(end).format("MM/DD/YYYY HH:mm"))
         date_range_picker();
         $('.start_hidden').val(moment(start).format('YYYY-MM-DD HH:mm'));
@@ -53,7 +54,30 @@
 
       calendar.fullCalendar('unselect');
     },
-    events: '/calendar_events.json'
+
+    eventDrop: function(event, delta, revertFunc) {
+      event_data = { 
+        event: {
+          id: event.id,
+          start_time: event.start.format(),
+          end_time: event.end.format()
+        }
+      };
+      $.ajax({
+          url: event.update_url,
+          data: event_data,
+          type: 'PATCH'
+      });
+    },
+      
+    // eventClick: function(event, jsEvent, view) {
+    //   $.getScript(event._url, function() {
+    //     $('#event_date_range').val(moment(event.start).format("MM/DD/YYYY HH:mm") + ' - ' + moment(event.end).format("MM/DD/YYYY HH:mm"))
+    //     date_range_picker();
+    //     $('.start_hidden').val(moment(event.start).format('YYYY-MM-DD HH:mm'));
+    //     $('.end_hidden').val(moment(event.end).format('YYYY-MM-DD HH:mm'));
+    //   });
+    // }
   });
 </script>
 
