--- a/app/views/calendar_events/show.html.erb
+++ b/app/views/calendar_events/show.html.erb
@@ -20,5 +20,16 @@
   <%= @calendar_event.end_time %>
 </p>
 
-<%= link_to 'Edit', edit_calendar_event_path(@calendar_event), remote: true %> |
-<%= link_to 'Back', calendar_events_path %>
+<%= link_to 'Edit', 
+                edit_calendar_event_path(@calendar_event), 
+                class: 'btn btn-success',
+                remote: true %> | 
+<%= link_to 'Delete', 
+                @calendar_event, 
+                method: :delete, 
+                class: 'btn btn-danger', 
+                data: { confirm: 'Are you sure?' }, 
+                remote: true unless @calendar_event.new_record? %> | 
+<%= link_to 'Back', 
+                calendar_events_path,
+                class: 'btn btn-secondary' %>
