--- a/app/views/calendar_events/_form.html.erb
+++ b/app/views/calendar_events/_form.html.erb
@@ -2,6 +2,7 @@
   <div class="form-inputs">
     <%= f.input :title %>
     <%= f.input :description %>
+    <%= f.input :event_type, collection: ['Litigation Event', 'March', 'Vigil'] %>
     <%= f.input :start_time %>
     <%= f.input :end_time %>
   </div>
