--- a/app/views/calendar_events/index.html.erb
+++ b/app/views/calendar_events/index.html.erb
@@ -1,35 +1,11 @@
-<h1>Listing Calendar Events</h1>
+<h1 class='text-center'>EBWiki Events Calendar
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Start time</th>
-      <th>End time</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+</h1>
+<%= link_to 'Add New Event', new_calendar_event_path,
+                class: 'btn btn-success col-md-offset-5',  remote: true %>
 
-  <tbody>
-    <% @calendar_events.each do |calendar_event| %>
-      <tr>
-        <td><%= calendar_event.title %></td>
-        <td><%= calendar_event.description %></td>
-        <td><%= calendar_event.start_time %></td>
-        <td><%= calendar_event.end_time %></td>
-        <td><%= link_to 'Show', calendar_event %></td>
-        <td><%= link_to 'Edit', edit_calendar_event_path(calendar_event), remote: true %></td>
-        <td><%= link_to 'Destroy', calendar_event, method: :delete, data: { confirm: 'Are you sure?' }, remote: true %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-<br>
+<div class="calendar"></div>  
 
-<%= link_to 'New Calendar event', new_calendar_event_path, remote: true %>
-
-<div class="calendar"></div>
 
 <script type="text/javascript">
   $('.calendar').fullCalendar({
