--- a/app/views/calendar_events/_form.html.erb
+++ b/app/views/calendar_events/_form.html.erb
@@ -3,8 +3,9 @@
     <%= f.input :title %>
     <%= f.input :description %>
     <%= f.input :event_type, collection: ['Litigation Event', 'March', 'Vigil'] %>
-    <%= f.input :start_time %>
-    <%= f.input :end_time %>
+    
+    <%= f.input :start_time, input_html: { class: "form-control input-sm datetimepicker" } %>
+    <%= f.input :end_time, input_html: { class: "form-control input-sm datetimepicker" } %>
   </div>
 
   <div class="form-actions">
