for #381 adding belongs_to relatoinship
Now the user creating the calendar_event will be the event owner. I will also set permissions such that only the event owne wll be able to delete an event that they have created.

--- a/app/views/calendar_events/show.html.erb
+++ b/app/views/calendar_events/show.html.erb
@@ -16,6 +16,11 @@
 </p>
 
 <p>
+  <strong>Event Owner:</strong>
+  <%= link_to @event_owner.name, user_path(@event_owner) %>
+</p>
+
+<p>
   <strong>Start time:</strong>
   <%= @calendar_event.start_time %>
 </p>
