--- a/app/views/comments/_add_comment_form.html.erb
+++ b/app/views/comments/_add_comment_form.html.erb
@@ -13,7 +13,7 @@
 
 	
 		<div class="form-group">
-		  <%= f.text_area :content, rows: 4, class: "form-control", placeholder: "Comment on this case" %>
+		  <%= f.text_area :content, rows: 4, class: "form-control", placeholder: "Add a Comment" %>
 	  </div>
 		<div class="form-group">
 			<div class="actions">
